# Cellframe-navigator

./: .env.example  .env.test  .gitignore  AUDIT_REPORT.md  CELLFRAME_RPC_SETUP.md  Dockerfile  FEATURES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MINIMAL_MODE.md  PRODUCTION_READY.md  PRODUCTION_RISKS.md  README.md  SETUP.md  TEST_REPORT.md  TEST_SCENARIOS.md  alembic.ini  audit_report.txt  check_health.py  docker-compose.minimal.yml  docker-compose.yml  env.example  env.minimal.example  pyproject.toml  run_audit.py  test_bot_scenarios.py  test_new_features.py
alembic/: env.py  script.py.mako
alembic/versions/: 20241002_0001-initial_schema.py
bot/: config.py  handlers.py  keyboards.py  main.py  notifications.py  rate_limiter.py  status_handler.py  storage.py
data/: database.py  models.py  repositories.py
queue/: tasks.py  worker.py
tasks/: worker.py
watcher/: cf20_rpc.py  cfscan.py  diagnostics.py  evm_tracker.py  fee_estimator.py  main.py  main_minimal.py  rpc_manager.py  tx_monitor.py  utils.py  validators.py
watcher/chains/: base.py  bsc.py  cf20.py  eth.py
watcher/schedulers/: base.py
