[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellframe-navigator"
version = "0.1.0"
description = "Telegram bot and watcher services for Cellframe bridge monitoring"
readme = "README.md"
authors = [{ name = "Cellframe", email = "dev@cellframe.net" }]
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.0.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "SQLAlchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "web3>=6.0.0",
    "httpx>=0.24.0",
    "alembic>=1.12.0",
    "eth-utils>=2.3.0",
]

[project.optional-dependencies]
watcher = ["apscheduler>=3.10.0"]

dynamic = ["classifiers"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*", "watcher*", "data*", "queue*"]
